bugfix: input fields on mobile

--- a/blocks/footer/__button/footer__button.css
+++ b/blocks/footer/__button/footer__button.css
@@ -8,4 +8,6 @@
 
   flex-basis: 40px;
   align-self: stretch;
+
+  aspect-ratio: 1;
 }
